Fix header logo centering in Chrome instead of being left-aligned

--- a/css/src/_header.scss
+++ b/css/src/_header.scss
@@ -129,7 +129,6 @@
 
 			img {
 				width: auto;
-				max-width: 100%;
 				max-height: 64px;
 			}
 		}
